[package]
name = "portspec"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["yabowarcherio <yabowarcher8590@gmail.com>"]
description = "Parse and manipulate TCP/UDP port specifications and ranges — pure logic, no networking, library + CLI."
documentation = "https://docs.rs/portspec"
repository = "https://github.com/yabowarcherio/portspec"
homepage = "https://github.com/yabowarcherio/portspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["port", "range", "ports", "parsing", "network"]
categories = ["network-programming", "command-line-utilities", "parsing"]
exclude = [
    ".github/",
    "benches/",
    "deny.toml",
]

[lib]
name = "portspec"
path = "src/lib.rs"

[[bin]]
name = "portspec"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# The CLI binary. Disable for a slim library-only dependency.
cli = ["dep:clap", "dep:serde_json"]
# Derive serde traits on the public types.
serde = ["dep:serde"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "spec"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
